[Fix] Tests fixed + sonarcube lore